# chatter_demo

./: CMakeLists.txt  readme.md  start.bat  users.json
client/: ChatClient.cpp  ChatClient.h  ChatWindow.cpp  ChatWindow.h  LoginWindow.cpp  LoginWindow.h  RegisterWindow.cpp  RegisterWindow.h  main.cpp  styles.qss
server/: ChatServer.cpp  ChatServer.h  main.cpp
